# NexusSniff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  implementation_plan.md  requirements.txt  run_nexus.bat  run_nexus.ps1  team_manager.py
app/: __init__.py  __main__.py  main.py
app/core/: __init__.py  capture_worker.py  db_manager.py  export_manager.py  packet_model.py
app/themes/: dark.qss  light.qss
app/ui/: __init__.py  capture_panel.py  crash_dialog.py  detail_panel.py  filter_bar.py  hex_view.py  icons.py  main_window.py  settings_dialog.py  stats_panel.py
engine/: CMakeLists.txt
engine/bindings/: py_nexus.cpp
engine/include/nexus/: capturer.hpp  decoder.hpp  filter.hpp  packet.hpp  session.hpp  stats.hpp  types.hpp
engine/src/: capturer.cpp  decoder.cpp  filter.cpp  packet.cpp  session.cpp  stats.cpp
engine/tests/: CMakeLists.txt
infra/: docker-compose.yml
scripts/: build_engine.ps1  create_release.ps1  setup_dev.ps1
tests/cpp/: test_ring_buffer.cpp
tests/python/: conftest.py  test_capture_worker.py  test_export_manager.py  test_packet_model.py
